# ezmsg

./: .gitignore  Cargo.toml
src/: err.rs  lib.rs  message.rs  validators.rs
tests/: simple.rs
