[package]
name = "ezmsg"
version = "0.6.2"
authors = ["jan.danielsson@qrnch.com"]
edition = "2018"
license = "0BSD"
keywords = [ "network" ]
repository = "https://github.com/openqrnch/ezmsg"
description = "Simple buffer with a topic and parameters."

[features]
#default = ["bytes"]

[dependencies]
bytes = { version = "0.5", optional = true }

